<resources>
    <string name="app_name">Famous Quote Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading">Loading&#8230;</string>
    <string name="mode">Multiple choice mode</string>
    <string name="binary_mode">Binary (Yes/No) mode</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="profile_title">My Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="log_in">Login</string>
    <string name="logout">Logout</string>
    <string name="forgot_pass">Forgot your password?</string>
    <string name="register">Register</string>
    <string name="splash_image">animated image</string>
    <string name="reg_acc">Create Account</string>
    <string name="obligatory">* Obligatory</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="username">Username</string>
    <string name="email_mandatory">*E-mail</string>
    <string name="password_mandatory">*Password</string>
    <string name="confirm_pass_mandatory">*Confirm Password</string>
    <string name="login_wait">Attempt login&#8230;</string>
    <string name="login_success">Login successful!</string>
    <string name="login_need">You have to login first!</string>
    <string name="user_not_found">The user was not found!</string>
    <string name="enter_email">please enter email</string>
    <string name="enter_password">please enter password</string>
    <string name="enter_password_again">please confirm the password</string>
    <string name="register_wait">Attempt registering&#8230;</string>
    <string name="register_success">Registration successful!</string>
    <string name="pass_not_match">Passwords don\'t match</string>
    <string name="wrong_pass">Incorrect password</string>
    <string name="email_exist">Sorry, that email already exist</string>
    <string name="correct_answer">Correct! The right answer is:\n</string>
    <string name="not_correct">Sorry, you are wrong! The right answer is:\n</string>
    <string name="ok">Ok</string>
    <string name="please_wait">Please wait..</string>
    <string name="start_again">Start again</string>
    <string name="edit_quiz">Edit Quiz</string>
    <string name="scores">Scores</string>
    <string name="save">Save</string>
    <string name="select_question">Select to edit&#8230;</string>
    <string name="select_quiz">Select Quiz</string>
    <string name="quiz_first">First you have to select Quiz.</string>
    <string name="correct">Correct:</string>
    <string name="success_changed">Successfully changed!</string>
    <string name="add_quiz">Add new question</string>
    <string name="add_result">Add result</string>
</resources>
