<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_eg_login"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/reg_acc"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"
                android:gravity="center_vertical"
                android:hint="@string/email_mandatory"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/password_reg"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:gravity="center_vertical"
                android:hint="@string/password_mandatory"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:gravity="center_vertical"
                android:hint="@string/confirm_pass_mandatory"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:textColor="@color/black" />

            <RelativeLayout
                android:id="@+id/terms_check"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="start"
                    android:maxLines="1"
                    android:text="@string/obligatory"
                    android:textColor="@color/black_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <EditText
                android:id="@+id/username"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/register_reg"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/publish_btn"
                android:text="@string/reg_acc"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>