<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_profile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clipToPadding="false"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/profile_title"
                android:textColor="@color/black"
                android:textSize="27sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_profile"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"
                android:enabled="false"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/username_profile"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:enabled="false"
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/logout_profile"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/logout"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>