<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/q_select_quiz_btn"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/answer"
            android:fontFamily="sans-serif-smallcaps"
            android:minWidth="100dp"
            android:text="@string/select_quiz"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/q_select_btn"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/answer"
                android:fontFamily="sans-serif-smallcaps"
                android:minWidth="100dp"
                android:text="@string/select_question"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/q_save_btn"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/publish_btn"
                android:fontFamily="sans-serif-smallcaps"
                android:minWidth="100dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/q_add_quiz_btn"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/answer"
            android:fontFamily="sans-serif-smallcaps"
            android:minWidth="100dp"
            android:text="@string/add_quiz"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/title_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-smallcaps"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/question_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:fontFamily="sans-serif-smallcaps"
                android:minHeight="80dp"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <include layout="@layout/answers_edit" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
